fixed overflow

--- a/views/Landing/About/About.module.scss
+++ b/views/Landing/About/About.module.scss
@@ -10,7 +10,7 @@
     justify-content: center;
 }
 .content {
-    max-width: map-get($map: $breakpoints, $key: lg);
+    max-width: has(lg);
     width: 90%;
     display: flex;
     justify-content: center;
