--- a/views/Landing/Features/Features.module.scss
+++ b/views/Landing/Features/Features.module.scss
@@ -12,7 +12,7 @@
 }
 .content {
     margin: 20% 0;
-    max-width: map-get($map: $breakpoints, $key: lg);
+    max-width: has(lg);
     width: 90%;
     display: flex;
     justify-content: center;
